--- a/config.toml
+++ b/config.toml
@@ -13,9 +13,13 @@ name    = "About"
 url     = "about"
 weight  = 2
 [[menu.main]]
+name    = "Courses"
+url     = "courses"
+weight  = 3
+[[menu.main]]
 name    = "Blog"
 url     = "blog"
-weight  = 3
+weight  = 4
 
 
 # Site Params
