--- a/config.toml
+++ b/config.toml
@@ -13,13 +13,17 @@ name    = "About"
 url     = "about"
 weight  = 2
 [[menu.main]]
-name    = "Courses"
-url     = "courses"
+name    = "Formations"
+url     = "formations"
+weight  = 3
+[[menu.main]]
+name    = "Services"
+url     = "services"
 weight  = 3
 [[menu.main]]
 name    = "Blog"
 url     = "blog"
-weight  = 4
+weight  = 5
 
 
 # Site Params
@@ -39,9 +43,50 @@ contactFormAction = "#" # contact form works with https://formspree.io
 [params.banner]
 enable  = true
 bgImage = "images/logo.png"
-heading = "HI, WE ARE Baretto"
-description = "artisan du changement"
+heading = "Chez Baretto, nous sommes"
+description = "Inspirés par la philosophie du Kaizen, passionnés par le lean et l’Agilité notre mission est de devenir par l’apport de valeur les artisans de votre changement."
 # button
 btn     = true
 btnText = "Download More"
 btnURL  = ""
+
+
+
+# flip text
+[[params.banner.flipText]]
+title   = "CRAFTMEN"
+[[params.banner.flipText]]
+title   = "AGILISTS"
+[[params.banner.flipText]]
+title   = "PRODUCT LOVER"
+
+
+
+
+# Portfolio Section On Homepage
+[params.portfolio]
+enable  = true
+title   = "Nos services"
+subtitle= "Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus."
+
+
+# Call to Action
+[params.cta]
+enable  = true
+title   = "Envie de discuter ?"
+content = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis,<br>possimus commodi, fugiat magnam temporibus vero magni recusandae? Dolore, maxime praesentium."
+btnText = "Contact with me"
+btnURL  = "/contact"
+
+# social icon
+[[params.socialIcon]]
+icon = "ion-social-facebook"
+url = "#"
+
+[[params.socialIcon]]
+icon = "ion-social-instagram"
+url = "#"
+
+[[params.socialIcon]]
+icon = "ion-social-linkedin"
+url = "#"
